fixbug helper not found

--- a/view/adminhtml/templates/order/view/items/renderer/bundle.phtml
+++ b/view/adminhtml/templates/order/view/items/renderer/bundle.phtml
@@ -19,7 +19,7 @@
 /** @var \Magento\Catalog\Helper\Data $catalogHelper */
 $catalogHelper = $block->getData('catalogHelper');
 ?>
-<?php $jsonHelper = $block->helper('Magento\Framework\Json\Helper\Data');?>
+<?php $jsonHelper = $this->helper('Magento\Framework\Json\Helper\Data');?>
 
 <?php $_prevOptionId = '' ?>
 
